# unicamp.bim

cpp/Projection/: .cproject  .project  CMakeLists.txt  project_inliers.cpp
cpp/RegionGrowing/: CMakeLists.txt  rg_segmentation.cpp
python/: pcd2img.py
